Contrast fix for links

--- a/css/index.css
+++ b/css/index.css
@@ -193,7 +193,7 @@ a {
 }
 
 a:hover {
-  color: #014713;
+  color: #1db954;
   transition: 1.2s ease-out;
 }
 
